tests/expectations/compiler/core/algorithms/snark_verify_outside_finalize_fail.out
Error [ETYC0372067]: This operation can only be used in an async function, an async block, or script.
    --> compiler-test:8:16
     |
   8 |         return Snark::verify(vk, v, inputs, proof);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372034]: `Snark::verify` must be inside an async function or an async block.
    --> compiler-test:8:16
     |
   8 |         return Snark::verify(vk, v, inputs, proof);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
